Fixed: Fixed some layout bugs.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -140,3 +140,7 @@ $sans-serif:
         color: black;
     }
 }
+
+.taxonomy__index {
+    padding-bottom: 0em;
+}
